--- a/template/template.tex
+++ b/template/template.tex
@@ -269,13 +269,6 @@ $endif$
 
 \vspace{3mm}
 
-% \begin{boldtabular}
-% \begin{tabularx}{\textwidth}{|l|l|X|l|X|l|X|}\hline
-% \parbox[c][10mm][c]{0pt}{} \multicolumn{2}{l}{学科}  & $metadata.table2.faculty$ & クラス & $metadata.table2.class$ & 学籍番号 & $metadata.table2.your_number$ \\  \hline
-% \parbox[c][16mm][c]{0pt}{}\textbf{報告者名}  & \multicolumn{6}{l|}{$metadata.table2.your_name$} \\ \hline
-% \end{tabularx}
-% \end{boldtabular}
-
 \begin{titletabular}
   \begin{table}[!h]
     \fontsize{14pt}{24pt}\selectfont
@@ -300,7 +293,7 @@ $endif$
 
 \begin{titletabular}
   \begin{tabularx}{\textwidth}{|wc{37mm}|Y|wc{37mm}|Y|}\hline
-    \parbox[c][12.5mm][c]{0pt}{} 実験日  & $metadata.table3.reporting_date$ & レポート提出日 & $metadata.table3.experiment_date$ \\ \hline
+    \parbox[c][12.5mm][c]{0pt}{} 実験日  & $metadata.table3.experiment_date$ & レポート提出日 & $metadata.table3.reporting_date$ \\ \hline
   \end{tabularx}
 \end{titletabular}
 
